assets/css/styles.css
/* ... */
.citation .btn:not(:disabled):not(.disabled){
  color: white;
}
.citation a:not([href]):not([tabindex]):hover{
  color: white;
  background: rgb(8, 29, 41);
}
.citation pre code{
  font-size: 95%;
  color: #fff;
}
.citation .title {
  margin-top: 0;
  margin-bottom: 60px;
  color: #103A54;
}
.citation .citation-inner {
  max-width: 800px;
  background: #fff;
  padding: 30px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  margin: 0 auto;
}
.citation-inner .row{
  margin-top: 40px;
}

.citation-inner .col{
  float: none; 
  margin: 0 auto;
}

.citation .info {
  max-width: 760px;
  margin: 0 auto;
}
.citation img {
  width: 100%;
  padding-left: 40px;
  padding-right: 40px;
}

/* ======= Funding Section ======= */
.funding {
  padding: 80px 0;
  background: #f5f5f5;
}
.funding .title {
  margin-top: 0;
  margin-bottom: 60px;
  color: #103A54;
}
.funding .funding-inner {
  max-width: 800px;
  background: #fff;
  padding: 30px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  margin: 0 auto;
}
.funding-inner .row{
  margin-top: 40px;
}

.funding-inner .col{
  float: none; 
  margin: 0 auto;
}

.funding .info {
  max-width: 760px;
  margin: 0 auto;
}
.funding img {
  width: 100%;
  padding-left: 40px;
  padding-right: 40px;
}
/* ======= Contact Section ======= */
.contact {
  padding: 80px 0;
  background: #268BD2;
  color: #fff;
}
.contact .contact-inner {
  max-width: 760px;
  margin: 0 auto;
}
.contact .title {
  color: #103A54;
  margin-top: 0;
  margin-bottom: 30px;
}
.contact .intro {
  margin-bottom: 60px;
}
.contact a {
  color: #074f66;
}
.contact a:hover {
  color: #042a36;
}
.contact .social-bar {
  margin-top: 80px;
}
.contact .info .sub-title {
  color: #103A54;
  margin-bottom: 10px;
  margin-top: 40px;
}
.contact .social-icons {
  list-style: none;
  padding: 10px 0;
  margin-bottom: 0;
  display: inline-block;
  margin: 0 auto;
}
.contact .social-icons li {
  float: left;
}
.contact .social-icons li.last {
  margin-right: 0;
}
.contact .social-icons a {
  display: inline-block;
  background: #2073A5;
  width: 48px;
  height: 48px;
  text-align: center;
  padding-top: 12px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  margin-right: 8px;
  float: left;
}
.contact .social-icons a:hover {
  background: #e6ad14;
}
.contact .social-icons a .fa,
.contact .social-icons a .far,
.contact .social-icons a .fab,
.contact .social-icons a .fas {
  color: #fff;
}
.contact .social-icons a .fa:before,
.contact .social-icons a .far:before,
.contact .social-icons a .fab:before,
.contact .social-icons a .fas:before {
  font-size: 26px;
  text-align: center;
  padding: 0;
}
.contact .row {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 60px;
}
.contact .item{
    margin-top: 5px;
    margin-bottom: 5px;
    padding: 0 5px 0 5px;
}
.contact .profile{
    position: relative;
    height: 100%;
    padding: 30px 15px 30px 15px;
    text-align: center;
    background: #2383c7;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    -ms-border-radius: 4px;
    -o-border-radius: 4px;
    border-radius: 4px;
    -moz-background-clip: padding;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
}
.contact .profile img{
    display: block;
    margin: 0 auto;
    height: 100%;
}
.contact .profile .image-container{
    border-radius: 100%;
    display: flex;
    flex: 0 0 100px;
    height: 100px;
    justify-content: center;
    overflow: hidden;
    position: relative;
    width: 100px;
    margin-bottom: 25px;
    margin-left: auto;
    margin-right: auto;
}
.contact .profile .image-overlay{
    align-items: center;
    bottom: 0;
    display: flex;
    justify-content: center;
    left: 0;
    opacity: 0;
    position: absolute;
    right: 0;
    top: 0;
    transition: opacity 0.1s;
    z-index: 1;
    background-color: rgba(5, 60, 78,0.5);
    color: #fafafa;
}
.contact .profile .image-overlay:hover{
    opacity: 1;
}
.contact .profile h3{
    font-size: 16px;
    font-weight: 700;
    margin-bottom: 10px;
}



.flexme {
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
}
.flexme > .item {
    flex: 0 1 20%;
}

.flexfunding {
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
}

.flexfunding > .item {
    flex: 0 1 50%;
}

/* ======= Footer ======= */
.footer {
  padding: 15px 0;
  background: #042a36;
  color: #fff;
}
.footer .copyright {
  -webkit-opacity: 0.8;
  -moz-opacity: 0.8;
  opacity: 0.8;
}
.footer .fa-heart {
  color: #fb866a;
}

/* Tablet devices smaller than 1200px width*/
@media (max-width: 1200px) {
  .promo .titlewrapper {
    margin-left: 160px;
    margin-right: 160px;
  }
  .contact .profile img {
    margin-left: auto;
    margin-right: auto
  }
  .contact .profile {
      text-align: center;
  }
  .contact .profile p {
      width: 100%;
  }
  .imageModal img {
    margin: 0 auto;
    display: block;
    width: 80%;
  }
  .flexme > .item {
      flex: 0 0 33%;
  }
  .flexfunding > .item {
      flex: 0 0 50%;
  }
}
@media (max-width: 991px) {
  .promo .titlewrapper {
    margin-left: 80px;
    margin-right:80px;
  }
}
/* ... */

